<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.triad.mvvmlearning.view.dashbord.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.triad.mvvmlearning.view.dashbord.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_savedfeedback"
            app:destination="@id/navigation_savedfeedback" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.triad.mvvmlearning.view.dashbord.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_notifications_details"
            app:destination="@id/navigation_notifications_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications_details"
        android:name="com.triad.mvvmlearning.view.dashbord.ui.notifications.NotificationsDetailsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications_details" />
    <fragment
        android:id="@+id/navigation_savedfeedback"
        android:name="com.triad.surveyamazon.view.savedFeedback.SavedFeedbackFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_saved_feedback" />

</navigation>